--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -14,6 +15,7 @@
     "google-places": "0.0.2",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "nanotimer": "^0.3.14",
     "pg": "^6.1.2",
     "serve-favicon": "~2.3.0"
   },
